# pdiags_bench

./: .gitignore  .gitmodules  README.md  build_instr.md  build_software.py  call_eirene.jl  cavities.py  compare_dg.py  compare_diags.py  compute_diag_ttk.py  compute_mean_distances.py  convert_datasets.py  diagram_distance.py  diamorse2gudhi.py  diamorse_diag_to_gudhi.py  dionysus_gudhi_persistence.py  dipha2eirene.py  dipha_explicit.py  download_datasets.py  eirene.py  eirene_persistence.py  empty.vtu  fast_dist.py  gen_random.py  gudhi_diag_inf.py  jplex_persistence.java  main.py  mesu_install.md  nx.py  oineus_persistence.py  parse_mesu_log.py  pbs.sh  pers2gudhi.py  pers_to_gudhi.py  persistentCycles.py  phat2gudhi.py  pyproject.toml  random_scalability.py  requirements.txt  res2tex.py  (+12 more)
patches/: Dipha_0001-Print-sum-of-ranks-memory-peaks.patch  DiscreteMorseSandwich_filters.patch  Makefile.perseus  PersistenceCycles_0001-Fix-Wreturn-type.patch  PersistenceCycles_0002-Make-Persistent-Diagram-VTU-compatible-with-TTK.patch  PersistenceCycles_0003-Output-Diagram-in-Gudhi-format.patch  diamorse_0001-Makefile-Target-Python2.patch  diamorse_0002-persistence.py-Add-Gudhi-format-output.patch  oineus_0001-New-example-file-for-simplicial-complexes.patch
plots/: compute_mean_distances.py  fix_json_files.py  mean_backend_peak_mem.py  mean_backend_times.py  parse_mesu_log.py  parse_ttk_log.py  plot_impl_ref.tex  plot_memory.py  plot_variants.py  plot_vti.py  plot_vtu.py  plots_utils.py  res2tex.py  results_1D.json  results_2D.json  results_3D.json  results_variants_1D.json  (+4 more)
(+17 files in other folders)
