[tool.poetry]
name = "pdiags_bench"
version = "0.1.0"
description = "Benchmark of persistence diagrams software"
authors = ["Pierre Guillou <pierre.guillou@lip6.fr>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
dionysus = "^2.0"
cmake = "^3.18.4"
requests = "^2.25.1"
netCDF4 = "^1.5.6"
scipy = "^1.6.3"
Cython = "^0.29.23"
pybind11 = "^2.6.2"
psutil = "^5.9.0"
